add test for simulating the problem for continuous receive